Refactor/cleanup for engineering
Refactor and cleanup for Nebula tests

--- a/Schwab.ClientNode/Properties/launchSettings.json
+++ b/Schwab.ClientNode/Properties/launchSettings.json
@@ -1,8 +1,7 @@
 {
   "profiles": {
     "Schwab.Client": {
-      "commandName": "Project",
-      "commandLineArgs": "1 100000"
+      "commandName": "Project"
     },
     "Docker": {
       "commandName": "Docker"
