--- a/Schwab.Server/Schwab.Server.csproj
+++ b/Schwab.Server/Schwab.Server.csproj
@@ -3,8 +3,8 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp2.1</TargetFramework>
-    <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
-    <DockerfileContext>..\ggnode-dontnet</DockerfileContext>
+	<Deterministic>false</Deterministic>
+    <AssemblyVersion>1.0.0.4</AssemblyVersion>
   </PropertyGroup>
 
   <ItemGroup>
