--- a/Schwab.Server/Properties/launchSettings.json
+++ b/Schwab.Server/Properties/launchSettings.json
@@ -1,10 +1,18 @@
 {
   "profiles": {
     "Schwab.Server": {
-      "commandName": "Project"
+      "commandName": "Project",
+      "environmentVariables": {
+        "IGNITE_LOG_CLASSPATH_CONTENT_ON_STARTUP": "true",
+        "JAVA_HOME": "/Library/Java/JavaVirtualMachines/jdk-11.0.11.jdk/Contents/Home"
+      }
     },
     "Docker": {
-      "commandName": "Docker"
+      "commandName": "Docker",
+      "environmentVariables": {
+        "IGNITE_LOG_CLASSPATH_CONTENT_ON_STARTUP": "true",
+        "JAVA_HOME": "/Library/Java/JavaVirtualMachines/jdk-11.0.11.jdk/Contents/Home"
+      }
     }
   }
 }
