--- a/Schwab.Shared/Schwab.Shared.csproj
+++ b/Schwab.Shared/Schwab.Shared.csproj
@@ -22,6 +22,9 @@
     <None Update="resources\ignite-config.xml">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Update="resources\spring.xml">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
