--- a/Schwab.ClientNode/Schwab.ClientNode.csproj
+++ b/Schwab.ClientNode/Schwab.ClientNode.csproj
@@ -3,8 +3,9 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp2.1</TargetFramework>
+<!--    <TargetFramework>net6.0</TargetFramework>-->
 	<Deterministic>false</Deterministic>
-	<AssemblyVersion>1.0.0</AssemblyVersion>
+	<AssemblyVersion>1.0.1</AssemblyVersion>
   </PropertyGroup>
 
   <PropertyGroup Condition=" '$(Configuration)' == 'Debug' ">
