--- a/Schwab.Server/Properties/launchSettings.json
+++ b/Schwab.Server/Properties/launchSettings.json
@@ -5,6 +5,9 @@
       "environmentVariables": {
         "IGNITE_LOG_CLASSPATH_CONTENT_ON_STARTUP": "true",
         "JAVA_HOME": "/Library/Java/JavaVirtualMachines/jdk-11.0.11.jdk/Contents/Home"
+      }"environmentVariables": {
+        "IGNITE_LOG_CLASSPATH_CONTENT_ON_STARTUP": "true",
+        "JAVA_HOME": "/Library/Java/JavaVirtualMachines/jdk-11.0.11.jdk/Contents/Home"
       }
     },
     "Docker": {
