--- a/Schwab.Server/Schwab.Server.csproj
+++ b/Schwab.Server/Schwab.Server.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp2.1</TargetFramework>
+    <TargetFramework>net6.0</TargetFramework>
 	<Deterministic>false</Deterministic>
     <AssemblyVersion>1.0.0</AssemblyVersion>
   </PropertyGroup>
