--- a/Schwab.Shared/Schwab.Shared.csproj
+++ b/Schwab.Shared/Schwab.Shared.csproj
@@ -2,8 +2,9 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.1</TargetFramework>
+<!--    <TargetFramework>net6.0</TargetFramework>-->
 	<Deterministic>false</Deterministic>
-    <AssemblyVersion>1.0.0</AssemblyVersion>
+    <AssemblyVersion>1.0.*</AssemblyVersion>
   </PropertyGroup>
 
   <PropertyGroup Condition=" '$(Configuration)' == 'Debug' ">
