--- a/Schwab.Shared/Schwab.Shared.csproj
+++ b/Schwab.Shared/Schwab.Shared.csproj
@@ -2,9 +2,9 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.1</TargetFramework>
-<!--    <TargetFramework>net6.0</TargetFramework>-->
-	<Deterministic>false</Deterministic>
-    <AssemblyVersion>1.0.*</AssemblyVersion>
+    <!--    <TargetFramework>net6.0</TargetFramework>-->
+    <Deterministic>false</Deterministic>
+    <AssemblyVersion>1.0.8131.35822</AssemblyVersion>
   </PropertyGroup>
 
   <PropertyGroup Condition=" '$(Configuration)' == 'Debug' ">
@@ -14,11 +14,11 @@
   <PropertyGroup Condition=" '$(Configuration)' == 'Release' ">
     <PlatformTarget>x64</PlatformTarget>
   </PropertyGroup>
-  
+
   <ItemGroup>
     <PackageReference Include="GridGain" Version="8.8.14" />
   </ItemGroup>
-  
+
   <ItemGroup>
     <None Update="resources\ignite-config.xml">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
